<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_day"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:contentDescription="@string/title"
        android:src="@drawable/game_name" />

    <EditText
        android:id="@+id/email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_above="@id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:autofillHints="emailAddress"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:textColorHint="@color/black"
        android:textSize="35sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:autofillHints="password"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textColorHint="@color/black"
        android:textSize="35sp" />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_centerHorizontal="true"
        android:autofillHints="password"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textColorHint="@color/black"
        android:textSize="35sp" />

    <Button
        android:id="@+id/singUp"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:onClick="onClick"
        android:padding="20dp"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="35sp"
        tools:ignore="RelativeOverlap" />

    <Button
        android:id="@+id/back"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="onClick"
        android:padding="20dp"
        android:text="@string/back"
        android:textColor="@color/white"
        android:textSize="35sp" />

</RelativeLayout>